# NoteBlockPlayer

./: CMakeLists.txt  LICENSE
cmake/: FindPortaudio.cmake  FindSndfile.cmake
src/: CMakeLists.txt  main.c  res.h
